# JobApplicantAssessor

./: .replit  ai_scoring.py  app.py  forms.py  models.py  pyproject.toml  routes.py
migrations/versions/: 3029b69d1d08_add_essayquestion_model.py  eeb902be9f4d_initial_migration.py
static/css/: style.css
static/js/: main.js
templates/: admin_applicant_detail.html  admin_dashboard.html  admin_login.html  application.html  base.html  confirmation.html  edit_question.html  index.html  manage_questions.html
